--- a/simulation.Rmd
+++ b/simulation.Rmd
@@ -67,21 +67,91 @@ sim_result %>%
   ggplot(aes(x=sd))+geom_density()
 ```
 
+## Let's try other sample size.
+```{r}
+n_list = 
+  list(
+    "n=30" = 30,
+    "n =60" = 60,
+    "n=120"=120,
+    "n=240"=240
+  )
+
+output = vector("list", length = 4)
+
+output[[1]] = rerun(100, sim_mean_sd(samp_size = n_list[[1]])) %>% bind_rows()
+output[[2]] = rerun(100, sim_mean_sd(samp_size = n_list[[1]])) %>% bind_rows()
+
+for(i in 1:4) {
+  output[[i]] = 
+    rerun(100, sim_mean_sd(samp_size = n_list[[i]]))%>%
+    bind_rows()
+}
+```
+
+```{r}
+tibble(
+  sample_size = c(30, 60, 120, 240)
+)%>%
+  mutate(
+    output_lists = map(.x = sample_size, ~ rerun(100, sim_mean_sd(.x))),
+  ) %>% pull(output_lists)
+
+```
+
+```{r}
+tibble(
+  sample_size = c(30, 60, 120, 240)
+)%>%
+  mutate(
+    output_lists = map(.x = sample_size, ~ rerun(100, sim_mean_sd(.x))),
+    estimate_df = map(output_lists, bind_rows)
+  ) %>% pull(estimate_df)
+
+```
+
+```{r}
+sim_results = 
+tibble(
+  sample_size = c(30, 60, 120, 240)
+)%>%
+  mutate(
+    output_lists = map(.x = sample_size, ~ rerun(100, sim_mean_sd(.x))),
+    estimate_df = map(output_lists, bind_rows)
+  ) %>% 
+  select(-output_lists) %>%
+  unnest(estimate_df)
+```
+
+Do some data frame things
+
+```{r}
+sim_results %>%
+  mutate(
+    sample_size = str_c("n = ", sample_size),
+    sample_size = fct_inorder(sample_size)) %>%
+  ggplot(aes(x = sample_size, y = mean)) +
+  geom_boxplot()
+```
+
+```{r}
+sim_results %>%
+  mutate(
+    sample_size = str_c("n = ", sample_size),
+    sample_size = fct_inorder(sample_size)) %>%
+  ggplot(aes(x = sample_size, y = mean)) +
+  geom_violin()
+```
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+```{r}
+sim_results %>%
+  group_by(sample_size) %>%
+  summarize(
+    ave_samp_mean = mean(mean),
+    sd_samp_mean = sd(mean)
+  )
+```
 
 
 
